--- a/DDGClient/src/main/res/layout/activity_main.xml
+++ b/DDGClient/src/main/res/layout/activity_main.xml
@@ -1,48 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:paddingBottom="8dp">
+
         <TextView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/wordSearchCaption"
             android:layout_weight="1" />
+
         <EditText
             android:id="@+id/editTextSearchWord"
             android:maxLines="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/buttonSearchCaption"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
         android:onClick="onClickRunQuery"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="8dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/queryStringCaption" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="@string/queryStringResult"
-        android:id="@+id/textViewQuery"
-        android:layout_weight="1"
-        android:paddingBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="--"
+            android:id="@+id/textViewQuery" />
+    </ScrollView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,12 +61,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/definitionResult"
+            android:text="--"
             android:id="@+id/textViewDefinition" />
     </ScrollView>
 
@@ -67,12 +77,18 @@
         android:layout_marginBottom="8dp"
         android:text="@string/definitionURLCaption" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="@string/definitionURLResult"
-        android:id="@+id/textViewDefinitionURL"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="--"
+            android:id="@+id/textViewDefinitionURL" />
+    </ScrollView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
