--- a/DDGClient/src/main/res/layout/activity_main.xml
+++ b/DDGClient/src/main/res/layout/activity_main.xml
@@ -5,25 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <EditText
+        android:id="@+id/editTextSearchWord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/wordSearchCaption"
-            android:layout_weight="1" />
-
-        <EditText
-            android:id="@+id/editTextSearchWord"
-            android:maxLines="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+        android:layout_marginBottom="8dp"
+        android:hint="@string/wordSearchHint"
+        android:inputType="textAutoCorrect"
+        android:imeOptions="actionSearch" />
 
     <Button
         android:layout_width="wrap_content"
