--- a/DDGClient/src/main/res/layout/activity_main.xml
+++ b/DDGClient/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/editTextSearchWord"
@@ -11,16 +11,16 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:hint="@string/wordSearchHint"
-        android:inputType="textAutoCorrect"
-        android:imeOptions="actionSearch" />
+        android:imeOptions="actionSearch"
+        android:inputType="textAutoCorrect" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buttonSearchCaption"
         android:layout_gravity="center_horizontal"
         android:onClick="onClickRunQuery"
-        android:paddingBottom="8dp" />
+        android:paddingBottom="8dp"
+        android:text="@string/buttonSearchCaption" />
 
     <TextView
         android:layout_width="match_parent"
@@ -35,10 +35,10 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/textViewQuery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="--"
-            android:id="@+id/textViewQuery" />
+            android:freezesText="true" />
     </ScrollView>
 
     <TextView
@@ -50,14 +50,14 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1">
 
         <TextView
+            android:id="@+id/textViewDefinition"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="--"
-            android:id="@+id/textViewDefinition" />
+            android:layout_height="wrap_content"
+            android:freezesText="true" />
     </ScrollView>
 
     <TextView
@@ -72,10 +72,10 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/textViewDefinitionURL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="--"
-            android:id="@+id/textViewDefinitionURL" />
+            android:freezesText="true" />
     </ScrollView>
 
     <TextView
@@ -89,10 +89,10 @@
         android:layout_weight="2">
 
         <TextView
+            android:id="@+id/textViewRawJson"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="--"
-            android:id="@+id/textViewRawJson" />
+            android:layout_height="wrap_content"
+            android:freezesText="true" />
     </ScrollView>
 
 </LinearLayout>
