Minor layout change: Search button is on the same line as query field to save space. Internal refactor: For FROYO (API 8 Android 2.2) and above, use AndroidHttpClient.newInstance and BasicResponseHandler(), otherwise continue to use HttpGetHelper, now deprecated.

--- a/DDGClient/src/main/res/layout/activity_main.xml
+++ b/DDGClient/src/main/res/layout/activity_main.xml
@@ -5,22 +5,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editTextSearchWord"
+    <LinearLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:hint="@string/wordSearchHint"
-        android:imeOptions="actionSearch"
-        android:inputType="textAutoCorrect" />
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="onClickRunQuery"
-        android:paddingBottom="8dp"
-        android:text="@string/buttonSearchCaption" />
+        <EditText
+            android:id="@+id/editTextSearchWord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/wordSearchHint"
+            android:imeOptions="actionSearch"
+            android:inputType="textAutoCorrect"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onClickRunQuery"
+            android:paddingBottom="8dp"
+            android:text="@string/buttonSearchCaption" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
